# lead_bot

./: .cursorignore  .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  KNOWN_ISSUES.md  MVP_TODO.md  Makefile  QUICKSTART.md  README.md  SETUP_COMPLETE.md  SETUP_FIXES.md  docker-compose.yml  healthcheck.py  package.json  pyproject.toml
docs/: deployment.md  development.md  product.md  tech.md
migrations/: .gitkeep
migrations/models/: 0_20251222134535_init.py  1_20251222222744_add_follow_up_count.py  2_20251223223901_add_llm_usage_tracking.py
plans/: .gitkeep  001-initial-setup.md  001-llm-enhancements-and-testing.md  002-implement-mvp-features.md  002-improve-test-coverage.md  002-text-input-and-free-chat-limits.md  002-typing-mypy.md  003-structured-conversation-flow.md  004-production-improvements.md  004-ux-improvements.md  005-high-priority-improvements.md
scripts/: auto-commit.sh  commit.sh
src/: __init__.py  bot.py  config.py  types.py  webhook.py
src/database/: __init__.py  config.py  models.py
src/handlers/: __init__.py  admin.py  conversation.py  meetings.py  start.py  states.py
src/keyboards/: __init__.py
src/middlewares/: __init__.py  logging.py
src/services/: __init__.py  llm.py  llm_monitor.py  notifier.py  qualifier.py  scheduler.py
src/utils/: logger.py
tests/: __init__.py  conftest.py  manual_test_guide.md  test_config.py  test_keyboards.py  test_llm_parsing.py  test_models.py  test_qualification.py  test_types.py
